--- a/rspec_results.html
+++ b/rspec_results.html
@@ -288,48 +288,48 @@ a {
   <dl style="margin-left: 15px;">
   <dt id="example_group_2" class="passed">Homepage</dt>
     <script type="text/javascript">moveProgressBar('2.8');</script>
-    <dd class="example passed"><span class="passed_spec_name">loads the homepage</span><span class='duration'>0.06349s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">loads the homepage</span><span class='duration'>0.19097s</span></dd>
   </dl>
 </div>
 <div id="div_group_3" class="example_group passed">
   <dl style="margin-left: 15px;">
   <dt id="example_group_3" class="passed">Signup Page</dt>
     <script type="text/javascript">moveProgressBar('5.7');</script>
-    <dd class="example passed"><span class="passed_spec_name">loads the signup page</span><span class='duration'>0.01055s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">loads the signup page</span><span class='duration'>0.02845s</span></dd>
     <script type="text/javascript">moveProgressBar('8.5');</script>
-    <dd class="example passed"><span class="passed_spec_name">signup directs user to twitter index</span><span class='duration'>0.06766s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">signup directs user to twitter index</span><span class='duration'>0.03748s</span></dd>
     <script type="text/javascript">moveProgressBar('11.4');</script>
-    <dd class="example passed"><span class="passed_spec_name">does not let a user sign up without a username</span><span class='duration'>0.03202s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">does not let a user sign up without a username</span><span class='duration'>0.00946s</span></dd>
     <script type="text/javascript">moveProgressBar('14.2');</script>
-    <dd class="example passed"><span class="passed_spec_name">does not let a user sign up without an email</span><span class='duration'>0.01616s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">does not let a user sign up without an email</span><span class='duration'>0.00969s</span></dd>
     <script type="text/javascript">moveProgressBar('17.1');</script>
-    <dd class="example passed"><span class="passed_spec_name">does not let a user sign up without a password</span><span class='duration'>0.01378s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">does not let a user sign up without a password</span><span class='duration'>0.01288s</span></dd>
     <script type="text/javascript">moveProgressBar('20.0');</script>
-    <dd class="example passed"><span class="passed_spec_name">does not let a logged in user view the signup page</span><span class='duration'>0.02569s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">does not let a logged in user view the signup page</span><span class='duration'>0.02429s</span></dd>
   </dl>
 </div>
 <div id="div_group_4" class="example_group passed">
   <dl style="margin-left: 15px;">
   <dt id="example_group_4" class="passed">login</dt>
     <script type="text/javascript">moveProgressBar('22.8');</script>
-    <dd class="example passed"><span class="passed_spec_name">loads the login page</span><span class='duration'>0.02006s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">loads the login page</span><span class='duration'>0.01779s</span></dd>
     <script type="text/javascript">moveProgressBar('25.7');</script>
-    <dd class="example passed"><span class="passed_spec_name">loads the tweets index after login</span><span class='duration'>0.06333s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">loads the tweets index after login</span><span class='duration'>0.05129s</span></dd>
     <script type="text/javascript">moveProgressBar('28.5');</script>
-    <dd class="example passed"><span class="passed_spec_name">does not let user view login page if already logged in</span><span class='duration'>0.02961s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">does not let user view login page if already logged in</span><span class='duration'>0.01991s</span></dd>
   </dl>
 </div>
 <div id="div_group_5" class="example_group passed">
   <dl style="margin-left: 15px;">
   <dt id="example_group_5" class="passed">logout</dt>
     <script type="text/javascript">moveProgressBar('31.4');</script>
-    <dd class="example passed"><span class="passed_spec_name">lets a user logout if they are already logged in</span><span class='duration'>0.02078s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">lets a user logout if they are already logged in</span><span class='duration'>0.01878s</span></dd>
     <script type="text/javascript">moveProgressBar('34.2');</script>
-    <dd class="example passed"><span class="passed_spec_name">does not let a user logout if not logged in</span><span class='duration'>0.00767s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">does not let a user logout if not logged in</span><span class='duration'>0.01077s</span></dd>
     <script type="text/javascript">moveProgressBar('37.1');</script>
-    <dd class="example passed"><span class="passed_spec_name">does not load /tweets if user not logged in</span><span class='duration'>0.03699s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">does not load /tweets if user not logged in</span><span class='duration'>0.01103s</span></dd>
     <script type="text/javascript">moveProgressBar('40.0');</script>
-    <dd class="example passed"><span class="passed_spec_name">does load /tweets if user is logged in</span><span class='duration'>0.06497s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">does load /tweets if user is logged in</span><span class='duration'>0.02380s</span></dd>
   </dl>
 </div>
 <div id="div_group_6" class="example_group passed">
@@ -341,7 +341,7 @@ a {
     <script type="text/javascript">moveProgressBar('42.8');</script>
     <dd class="example failed">
       <span class="failed_spec_name">shows all a single users tweets</span>
-      <span class="duration">0.08074s</span>
+      <span class="duration">0.06481s</span>
       <div class="failure" id="failure_1">
         <div class="message"><pre>expected &quot;&lt;!DOCTYPE html&gt;\n&lt;html&gt;\n&lt;head&gt;\n  &lt;style type=\&quot;text/css\&quot;&gt;\n  body { text-align:center;font-family:helvetica,arial;font-size:22px;\n    color:#888;margin:20px}\n  #c {margin:0 auto;width:500px;text-align:left}\n  &lt;/style&gt;\n&lt;/head&gt;\n&lt;body&gt;\n  &lt;h2&gt;Sinatra doesn&amp;rsquo;t know this ditty.&lt;/h2&gt;\n  &lt;img src=&#39;http://example.org/__sinatra__/404.png&#39;&gt;\n  &lt;div id=\&quot;c\&quot;&gt;\n    Try this:\n    &lt;pre&gt;# in application_controller.rb\nclass ApplicationController\n  get &amp;#x27;&amp;#x2F;users&amp;#x2F;becky567&amp;#x27; do\n    &amp;quot;Hello World&amp;quot;\n  end\nend\n&lt;/pre&gt;\n  &lt;/div&gt;\n&lt;/body&gt;\n&lt;/html&gt;\n&quot; to include &quot;tweeting!&quot;
 Diff:[0m
@@ -390,14 +390,14 @@ Diff:[0m
   <dl style="margin-left: 30px;">
   <dt id="example_group_8" class="passed">logged in</dt>
     <script type="text/javascript">moveProgressBar('45.7');</script>
-    <dd class="example passed"><span class="passed_spec_name">lets a user view the tweets index if logged in</span><span class='duration'>0.06741s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">lets a user view the tweets index if logged in</span><span class='duration'>0.06309s</span></dd>
   </dl>
 </div>
 <div id="div_group_9" class="example_group passed">
   <dl style="margin-left: 30px;">
   <dt id="example_group_9" class="passed">logged out</dt>
     <script type="text/javascript">moveProgressBar('48.5');</script>
-    <dd class="example passed"><span class="passed_spec_name">does not let a user view the tweets index if not logged in</span><span class='duration'>0.01230s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">does not let a user view the tweets index if not logged in</span><span class='duration'>0.01188s</span></dd>
   </dl>
 </div>
 <div id="div_group_10" class="example_group passed">
@@ -413,7 +413,7 @@ Diff:[0m
     <script type="text/javascript">moveProgressBar('51.4');</script>
     <dd class="example failed">
       <span class="failed_spec_name">lets user view new tweet form if logged in</span>
-      <span class="duration">0.02467s</span>
+      <span class="duration">0.02560s</span>
       <div class="failure" id="failure_2">
         <div class="message"><pre>
 expected: 200
@@ -432,7 +432,7 @@ expected: 200
     <script type="text/javascript">moveProgressBar('54.2');</script>
     <dd class="example failed">
       <span class="failed_spec_name">lets user create a tweet if they are logged in</span>
-      <span class="duration">0.02994s</span>
+      <span class="duration">0.02796s</span>
       <div class="failure" id="failure_3">
         <div class="message"><pre>Unable to find field :content</pre></div>
         <div class="backtrace"><pre>/Users/brandenmiller/.rvm/gems/ruby-2.2.3/gems/capybara-2.5.0/lib/capybara/node/finders.rb:43:in `block in find&#39;
@@ -452,7 +452,7 @@ expected: 200
     <script type="text/javascript">moveProgressBar('57.1');</script>
     <dd class="example failed">
       <span class="failed_spec_name">does not let a user tweet from another user</span>
-      <span class="duration">0.03117s</span>
+      <span class="duration">0.03141s</span>
       <div class="failure" id="failure_4">
         <div class="message"><pre>Unable to find field :content</pre></div>
         <div class="backtrace"><pre>/Users/brandenmiller/.rvm/gems/ruby-2.2.3/gems/capybara-2.5.0/lib/capybara/node/finders.rb:43:in `block in find&#39;
@@ -472,7 +472,7 @@ expected: 200
     <script type="text/javascript">moveProgressBar('60.0');</script>
     <dd class="example failed">
       <span class="failed_spec_name">does not let a user create a blank tweet</span>
-      <span class="duration">0.02705s</span>
+      <span class="duration">0.02648s</span>
       <div class="failure" id="failure_5">
         <div class="message"><pre>Unable to find field :content</pre></div>
         <div class="backtrace"><pre>/Users/brandenmiller/.rvm/gems/ruby-2.2.3/gems/capybara-2.5.0/lib/capybara/node/finders.rb:43:in `block in find&#39;
@@ -499,7 +499,7 @@ expected: 200
     <script type="text/javascript">moveProgressBar('62.8');</script>
     <dd class="example failed">
       <span class="failed_spec_name">does not let user view new tweet form if not logged in</span>
-      <span class="duration">0.01357s</span>
+      <span class="duration">0.01100s</span>
       <div class="failure" id="failure_6">
         <div class="message"><pre>expected nil to include &quot;/login&quot;, but it does not respond to `include?`</pre></div>
         <div class="backtrace"><pre>./spec/controllers/application_controller_spec.rb:273:in `block (4 levels) in &lt;top (required)&gt;&#39;</pre></div>
@@ -525,7 +525,7 @@ expected: 200
     <script type="text/javascript">moveProgressBar('65.7');</script>
     <dd class="example failed">
       <span class="failed_spec_name">displays a single tweet</span>
-      <span class="duration">0.03171s</span>
+      <span class="duration">0.03360s</span>
       <div class="failure" id="failure_7">
         <div class="message"><pre>
 expected: 200
@@ -551,7 +551,7 @@ expected: 200
     <script type="text/javascript">moveProgressBar('68.5');</script>
     <dd class="example failed">
       <span class="failed_spec_name">does not let a user view a tweet</span>
-      <span class="duration">0.02191s</span>
+      <span class="duration">0.01958s</span>
       <div class="failure" id="failure_8">
         <div class="message"><pre>expected nil to include &quot;/login&quot;, but it does not respond to `include?`</pre></div>
         <div class="backtrace"><pre>./spec/controllers/application_controller_spec.rb:303:in `block (5 levels) in &lt;top (required)&gt;&#39;</pre></div>
@@ -577,7 +577,7 @@ expected: 200
     <script type="text/javascript">moveProgressBar('71.4');</script>
     <dd class="example failed">
       <span class="failed_spec_name">lets a user view tweet edit form if they are logged in</span>
-      <span class="duration">0.03923s</span>
+      <span class="duration">0.02939s</span>
       <div class="failure" id="failure_9">
         <div class="message"><pre>
 expected: 200
@@ -594,11 +594,11 @@ expected: 200
       </div>
     </dd>
     <script type="text/javascript">moveProgressBar('74.2');</script>
-    <dd class="example passed"><span class="passed_spec_name">does not let a user edit a tweet they did not create</span><span class='duration'>0.03794s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">does not let a user edit a tweet they did not create</span><span class='duration'>0.04193s</span></dd>
     <script type="text/javascript">moveProgressBar('77.1');</script>
     <dd class="example failed">
       <span class="failed_spec_name">lets a user edit their own tweet if they are logged in</span>
-      <span class="duration">0.02920s</span>
+      <span class="duration">0.02928s</span>
       <div class="failure" id="failure_10">
         <div class="message"><pre>Unable to find field :content</pre></div>
         <div class="backtrace"><pre>/Users/brandenmiller/.rvm/gems/ruby-2.2.3/gems/capybara-2.5.0/lib/capybara/node/finders.rb:43:in `block in find&#39;
@@ -618,7 +618,7 @@ expected: 200
     <script type="text/javascript">moveProgressBar('80.0');</script>
     <dd class="example failed">
       <span class="failed_spec_name">does not let a user edit a text with blank content</span>
-      <span class="duration">0.03915s</span>
+      <span class="duration">0.04003s</span>
       <div class="failure" id="failure_11">
         <div class="message"><pre>Unable to find field :content</pre></div>
         <div class="backtrace"><pre>/Users/brandenmiller/.rvm/gems/ruby-2.2.3/gems/capybara-2.5.0/lib/capybara/node/finders.rb:43:in `block in find&#39;
@@ -645,7 +645,7 @@ expected: 200
     <script type="text/javascript">moveProgressBar('82.8');</script>
     <dd class="example failed">
       <span class="failed_spec_name">does not load let user view tweet edit form if not logged in</span>
-      <span class="duration">0.01237s</span>
+      <span class="duration">0.01398s</span>
       <div class="failure" id="failure_12">
         <div class="message"><pre>expected nil to include &quot;/login&quot;, but it does not respond to `include?`</pre></div>
         <div class="backtrace"><pre>./spec/controllers/application_controller_spec.rb:386:in `block (4 levels) in &lt;top (required)&gt;&#39;</pre></div>
@@ -671,7 +671,7 @@ expected: 200
     <script type="text/javascript">moveProgressBar('85.7');</script>
     <dd class="example failed">
       <span class="failed_spec_name">lets a user delete their own tweet if they are logged in</span>
-      <span class="duration">0.03574s</span>
+      <span class="duration">0.05734s</span>
       <div class="failure" id="failure_13">
         <div class="message"><pre>Unable to find button &quot;Delete Tweet&quot;</pre></div>
         <div class="backtrace"><pre>/Users/brandenmiller/.rvm/gems/ruby-2.2.3/gems/capybara-2.5.0/lib/capybara/node/finders.rb:43:in `block in find&#39;
@@ -691,7 +691,7 @@ expected: 200
     <script type="text/javascript">moveProgressBar('88.5');</script>
     <dd class="example failed">
       <span class="failed_spec_name">does not let a user delete a tweet they did not create</span>
-      <span class="duration">0.08634s</span>
+      <span class="duration">0.03636s</span>
       <div class="failure" id="failure_14">
         <div class="message"><pre>Unable to find button &quot;Delete Tweet&quot;</pre></div>
         <div class="backtrace"><pre>/Users/brandenmiller/.rvm/gems/ruby-2.2.3/gems/capybara-2.5.0/lib/capybara/node/finders.rb:43:in `block in find&#39;
@@ -718,7 +718,7 @@ expected: 200
     <script type="text/javascript">moveProgressBar('91.4');</script>
     <dd class="example failed">
       <span class="failed_spec_name">does not load let user delete a tweet if not logged in</span>
-      <span class="duration">0.01272s</span>
+      <span class="duration">0.01687s</span>
       <div class="failure" id="failure_15">
         <div class="message"><pre>
 expected: &quot;/login&quot;
@@ -740,17 +740,17 @@ expected: &quot;/login&quot;
   <dl style="margin-left: 0px;">
   <dt id="example_group_22" class="passed">User</dt>
     <script type="text/javascript">moveProgressBar('94.2');</script>
-    <dd class="example passed"><span class="passed_spec_name">can slug the username</span><span class='duration'>0.01622s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">can slug the username</span><span class='duration'>0.01107s</span></dd>
     <script type="text/javascript">moveProgressBar('97.1');</script>
-    <dd class="example passed"><span class="passed_spec_name">can find a user based on the slug</span><span class='duration'>0.01264s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">can find a user based on the slug</span><span class='duration'>0.01473s</span></dd>
     <script type="text/javascript">makeRed('div_group_22');</script>
     <script type="text/javascript">makeRed('example_group_22');</script>
     <script type="text/javascript">moveProgressBar('100.0');</script>
     <dd class="example failed">
       <span class="failed_spec_name">has a secure password</span>
-      <span class="duration">0.01136s</span>
+      <span class="duration">0.01080s</span>
       <div class="failure" id="failure_16">
-        <div class="message"><pre>undefined method `authenticate&#39; for #&lt;User:0x007fda7c4bb690&gt;</pre></div>
+        <div class="message"><pre>undefined method `authenticate&#39; for #&lt;User:0x007ff185499c28&gt;</pre></div>
         <div class="backtrace"><pre>/Users/brandenmiller/.rvm/gems/ruby-2.2.3/gems/activemodel-4.2.5/lib/active_model/attribute_methods.rb:433:in `method_missing&#39;
 ./spec/models/user_spec.rb:18:in `block (2 levels) in &lt;top (required)&gt;&#39;</pre></div>
     <pre class="ruby"><code><span class="linenum">431</span>      <span class="keyword">else</span>
@@ -762,7 +762,7 @@ expected: &quot;/login&quot;
     </dd>
   </dl>
 </div>
-<script type="text/javascript">document.getElementById('duration').innerHTML = "Finished in <strong>1.33703 seconds</strong>";</script>
+<script type="text/javascript">document.getElementById('duration').innerHTML = "Finished in <strong>1.22295 seconds</strong>";</script>
 <script type="text/javascript">document.getElementById('totals').innerHTML = "35 examples, 16 failures";</script>
 </div>
 </div>
