utilize logged_in? method

--- a/rspec_results.html
+++ b/rspec_results.html
@@ -288,55 +288,55 @@ a {
   <dl style="margin-left: 15px;">
   <dt id="example_group_2" class="passed">Homepage</dt>
     <script type="text/javascript">moveProgressBar('2.8');</script>
-    <dd class="example passed"><span class="passed_spec_name">loads the homepage</span><span class='duration'>0.05493s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">loads the homepage</span><span class='duration'>0.06338s</span></dd>
   </dl>
 </div>
 <div id="div_group_3" class="example_group passed">
   <dl style="margin-left: 15px;">
   <dt id="example_group_3" class="passed">Signup Page</dt>
     <script type="text/javascript">moveProgressBar('5.7');</script>
-    <dd class="example passed"><span class="passed_spec_name">loads the signup page</span><span class='duration'>0.01288s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">loads the signup page</span><span class='duration'>0.01057s</span></dd>
     <script type="text/javascript">moveProgressBar('8.5');</script>
-    <dd class="example passed"><span class="passed_spec_name">signup directs user to twitter index</span><span class='duration'>0.02578s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">signup directs user to twitter index</span><span class='duration'>0.02805s</span></dd>
     <script type="text/javascript">moveProgressBar('11.4');</script>
-    <dd class="example passed"><span class="passed_spec_name">does not let a user sign up without a username</span><span class='duration'>0.01288s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">does not let a user sign up without a username</span><span class='duration'>0.01101s</span></dd>
     <script type="text/javascript">moveProgressBar('14.2');</script>
-    <dd class="example passed"><span class="passed_spec_name">does not let a user sign up without an email</span><span class='duration'>0.01028s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">does not let a user sign up without an email</span><span class='duration'>0.01147s</span></dd>
     <script type="text/javascript">moveProgressBar('17.1');</script>
-    <dd class="example passed"><span class="passed_spec_name">does not let a user sign up without a password</span><span class='duration'>0.01103s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">does not let a user sign up without a password</span><span class='duration'>0.01021s</span></dd>
     <script type="text/javascript">moveProgressBar('20.0');</script>
-    <dd class="example passed"><span class="passed_spec_name">does not let a logged in user view the signup page</span><span class='duration'>0.02277s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">does not let a logged in user view the signup page</span><span class='duration'>0.02159s</span></dd>
   </dl>
 </div>
 <div id="div_group_4" class="example_group passed">
   <dl style="margin-left: 15px;">
   <dt id="example_group_4" class="passed">login</dt>
     <script type="text/javascript">moveProgressBar('22.8');</script>
-    <dd class="example passed"><span class="passed_spec_name">loads the login page</span><span class='duration'>0.01382s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">loads the login page</span><span class='duration'>0.01311s</span></dd>
     <script type="text/javascript">moveProgressBar('25.7');</script>
-    <dd class="example passed"><span class="passed_spec_name">loads the tweets index after login</span><span class='duration'>0.03073s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">loads the tweets index after login</span><span class='duration'>0.02927s</span></dd>
     <script type="text/javascript">moveProgressBar('28.5');</script>
-    <dd class="example passed"><span class="passed_spec_name">does not let user view login page if already logged in</span><span class='duration'>0.01978s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">does not let user view login page if already logged in</span><span class='duration'>0.01957s</span></dd>
   </dl>
 </div>
 <div id="div_group_5" class="example_group passed">
   <dl style="margin-left: 15px;">
   <dt id="example_group_5" class="passed">logout</dt>
     <script type="text/javascript">moveProgressBar('31.4');</script>
-    <dd class="example passed"><span class="passed_spec_name">lets a user logout if they are already logged in</span><span class='duration'>0.01844s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">lets a user logout if they are already logged in</span><span class='duration'>0.01802s</span></dd>
     <script type="text/javascript">moveProgressBar('34.2');</script>
-    <dd class="example passed"><span class="passed_spec_name">does not let a user logout if not logged in</span><span class='duration'>0.01098s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">does not let a user logout if not logged in</span><span class='duration'>0.01074s</span></dd>
     <script type="text/javascript">moveProgressBar('37.1');</script>
-    <dd class="example passed"><span class="passed_spec_name">does not load /tweets if user not logged in</span><span class='duration'>0.01086s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">does not load /tweets if user not logged in</span><span class='duration'>0.01274s</span></dd>
     <script type="text/javascript">moveProgressBar('40.0');</script>
-    <dd class="example passed"><span class="passed_spec_name">does load /tweets if user is logged in</span><span class='duration'>0.02485s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">does load /tweets if user is logged in</span><span class='duration'>0.02500s</span></dd>
   </dl>
 </div>
 <div id="div_group_6" class="example_group passed">
   <dl style="margin-left: 15px;">
   <dt id="example_group_6" class="passed">user show page</dt>
     <script type="text/javascript">moveProgressBar('42.8');</script>
-    <dd class="example passed"><span class="passed_spec_name">shows all a single users tweets</span><span class='duration'>0.04181s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">shows all a single users tweets</span><span class='duration'>0.04683s</span></dd>
   </dl>
 </div>
 <div id="div_group_7" class="example_group passed">
@@ -348,14 +348,14 @@ a {
   <dl style="margin-left: 30px;">
   <dt id="example_group_8" class="passed">logged in</dt>
     <script type="text/javascript">moveProgressBar('45.7');</script>
-    <dd class="example passed"><span class="passed_spec_name">lets a user view the tweets index if logged in</span><span class='duration'>0.03798s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">lets a user view the tweets index if logged in</span><span class='duration'>0.04234s</span></dd>
   </dl>
 </div>
 <div id="div_group_9" class="example_group passed">
   <dl style="margin-left: 30px;">
   <dt id="example_group_9" class="passed">logged out</dt>
     <script type="text/javascript">moveProgressBar('48.5');</script>
-    <dd class="example passed"><span class="passed_spec_name">does not let a user view the tweets index if not logged in</span><span class='duration'>0.01080s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">does not let a user view the tweets index if not logged in</span><span class='duration'>0.01316s</span></dd>
   </dl>
 </div>
 <div id="div_group_10" class="example_group passed">
@@ -367,20 +367,20 @@ a {
   <dl style="margin-left: 30px;">
   <dt id="example_group_11" class="passed">logged in</dt>
     <script type="text/javascript">moveProgressBar('51.4');</script>
-    <dd class="example passed"><span class="passed_spec_name">lets user view new tweet form if logged in</span><span class='duration'>0.02417s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">lets user view new tweet form if logged in</span><span class='duration'>0.02856s</span></dd>
     <script type="text/javascript">moveProgressBar('54.2');</script>
-    <dd class="example passed"><span class="passed_spec_name">lets user create a tweet if they are logged in</span><span class='duration'>0.04152s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">lets user create a tweet if they are logged in</span><span class='duration'>0.04691s</span></dd>
     <script type="text/javascript">moveProgressBar('57.1');</script>
-    <dd class="example passed"><span class="passed_spec_name">does not let a user tweet from another user</span><span class='duration'>0.04625s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">does not let a user tweet from another user</span><span class='duration'>0.04310s</span></dd>
     <script type="text/javascript">moveProgressBar('60.0');</script>
-    <dd class="example passed"><span class="passed_spec_name">does not let a user create a blank tweet</span><span class='duration'>0.03302s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">does not let a user create a blank tweet</span><span class='duration'>0.03832s</span></dd>
   </dl>
 </div>
 <div id="div_group_12" class="example_group passed">
   <dl style="margin-left: 30px;">
   <dt id="example_group_12" class="passed">logged out</dt>
     <script type="text/javascript">moveProgressBar('62.8');</script>
-    <dd class="example passed"><span class="passed_spec_name">does not let user view new tweet form if not logged in</span><span class='duration'>0.01448s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">does not let user view new tweet form if not logged in</span><span class='duration'>0.01057s</span></dd>
   </dl>
 </div>
 <div id="div_group_13" class="example_group passed">
@@ -397,7 +397,7 @@ a {
     <script type="text/javascript">moveProgressBar('65.7');</script>
     <dd class="example failed">
       <span class="failed_spec_name">displays a single tweet</span>
-      <span class="duration">0.06194s</span>
+      <span class="duration">0.04545s</span>
       <div class="failure" id="failure_1">
         <div class="message"><pre>expected &quot;&lt;!DOCTYPE html&gt;\n&lt;html&gt;\n&lt;head&gt;\n  &lt;title&gt;Fwitter&lt;/title&gt;\n&lt;/head&gt;\n&lt;body&gt;\ni am a boss at tweeting&lt;/body&gt;\n&lt;/html&gt;&quot; to include &quot;Delete Tweet&quot;
 Diff:[0m
@@ -430,7 +430,7 @@ Diff:[0m
     <script type="text/javascript">moveProgressBar('68.5');</script>
     <dd class="example failed">
       <span class="failed_spec_name">does not let a user view a tweet</span>
-      <span class="duration">0.02214s</span>
+      <span class="duration">0.02987s</span>
       <div class="failure" id="failure_2">
         <div class="message"><pre>expected nil to include &quot;/login&quot;, but it does not respond to `include?`</pre></div>
         <div class="backtrace"><pre>./spec/controllers/application_controller_spec.rb:303:in `block (5 levels) in &lt;top (required)&gt;&#39;</pre></div>
@@ -456,7 +456,7 @@ Diff:[0m
     <script type="text/javascript">moveProgressBar('71.4');</script>
     <dd class="example failed">
       <span class="failed_spec_name">lets a user view tweet edit form if they are logged in</span>
-      <span class="duration">0.03248s</span>
+      <span class="duration">0.02972s</span>
       <div class="failure" id="failure_3">
         <div class="message"><pre>
 expected: 200
@@ -473,11 +473,11 @@ expected: 200
       </div>
     </dd>
     <script type="text/javascript">moveProgressBar('74.2');</script>
-    <dd class="example passed"><span class="passed_spec_name">does not let a user edit a tweet they did not create</span><span class='duration'>0.04436s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">does not let a user edit a tweet they did not create</span><span class='duration'>0.03490s</span></dd>
     <script type="text/javascript">moveProgressBar('77.1');</script>
     <dd class="example failed">
       <span class="failed_spec_name">lets a user edit their own tweet if they are logged in</span>
-      <span class="duration">0.03450s</span>
+      <span class="duration">0.03169s</span>
       <div class="failure" id="failure_4">
         <div class="message"><pre>Unable to find field :content</pre></div>
         <div class="backtrace"><pre>/Users/brandenmiller/.rvm/gems/ruby-2.2.3/gems/capybara-2.5.0/lib/capybara/node/finders.rb:43:in `block in find&#39;
@@ -497,7 +497,7 @@ expected: 200
     <script type="text/javascript">moveProgressBar('80.0');</script>
     <dd class="example failed">
       <span class="failed_spec_name">does not let a user edit a text with blank content</span>
-      <span class="duration">0.03595s</span>
+      <span class="duration">0.03400s</span>
       <div class="failure" id="failure_5">
         <div class="message"><pre>Unable to find field :content</pre></div>
         <div class="backtrace"><pre>/Users/brandenmiller/.rvm/gems/ruby-2.2.3/gems/capybara-2.5.0/lib/capybara/node/finders.rb:43:in `block in find&#39;
@@ -524,7 +524,7 @@ expected: 200
     <script type="text/javascript">moveProgressBar('82.8');</script>
     <dd class="example failed">
       <span class="failed_spec_name">does not load let user view tweet edit form if not logged in</span>
-      <span class="duration">0.01219s</span>
+      <span class="duration">0.00950s</span>
       <div class="failure" id="failure_6">
         <div class="message"><pre>expected nil to include &quot;/login&quot;, but it does not respond to `include?`</pre></div>
         <div class="backtrace"><pre>./spec/controllers/application_controller_spec.rb:386:in `block (4 levels) in &lt;top (required)&gt;&#39;</pre></div>
@@ -550,7 +550,7 @@ expected: 200
     <script type="text/javascript">moveProgressBar('85.7');</script>
     <dd class="example failed">
       <span class="failed_spec_name">lets a user delete their own tweet if they are logged in</span>
-      <span class="duration">0.04718s</span>
+      <span class="duration">0.03152s</span>
       <div class="failure" id="failure_7">
         <div class="message"><pre>Unable to find button &quot;Delete Tweet&quot;</pre></div>
         <div class="backtrace"><pre>/Users/brandenmiller/.rvm/gems/ruby-2.2.3/gems/capybara-2.5.0/lib/capybara/node/finders.rb:43:in `block in find&#39;
@@ -570,7 +570,7 @@ expected: 200
     <script type="text/javascript">moveProgressBar('88.5');</script>
     <dd class="example failed">
       <span class="failed_spec_name">does not let a user delete a tweet they did not create</span>
-      <span class="duration">0.03949s</span>
+      <span class="duration">0.04187s</span>
       <div class="failure" id="failure_8">
         <div class="message"><pre>Unable to find button &quot;Delete Tweet&quot;</pre></div>
         <div class="backtrace"><pre>/Users/brandenmiller/.rvm/gems/ruby-2.2.3/gems/capybara-2.5.0/lib/capybara/node/finders.rb:43:in `block in find&#39;
@@ -597,7 +597,7 @@ expected: 200
     <script type="text/javascript">moveProgressBar('91.4');</script>
     <dd class="example failed">
       <span class="failed_spec_name">does not load let user delete a tweet if not logged in</span>
-      <span class="duration">0.01569s</span>
+      <span class="duration">0.01909s</span>
       <div class="failure" id="failure_9">
         <div class="message"><pre>
 expected: &quot;/login&quot;
@@ -619,17 +619,17 @@ expected: &quot;/login&quot;
   <dl style="margin-left: 0px;">
   <dt id="example_group_22" class="passed">User</dt>
     <script type="text/javascript">moveProgressBar('94.2');</script>
-    <dd class="example passed"><span class="passed_spec_name">can slug the username</span><span class='duration'>0.01311s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">can slug the username</span><span class='duration'>0.01195s</span></dd>
     <script type="text/javascript">moveProgressBar('97.1');</script>
-    <dd class="example passed"><span class="passed_spec_name">can find a user based on the slug</span><span class='duration'>0.01402s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">can find a user based on the slug</span><span class='duration'>0.01167s</span></dd>
     <script type="text/javascript">makeRed('div_group_22');</script>
     <script type="text/javascript">makeRed('example_group_22');</script>
     <script type="text/javascript">moveProgressBar('100.0');</script>
     <dd class="example failed">
       <span class="failed_spec_name">has a secure password</span>
-      <span class="duration">0.01141s</span>
+      <span class="duration">0.01023s</span>
       <div class="failure" id="failure_10">
-        <div class="message"><pre>undefined method `authenticate&#39; for #&lt;User:0x007fdefc1f2678&gt;</pre></div>
+        <div class="message"><pre>undefined method `authenticate&#39; for #&lt;User:0x007f9c6e3b3370&gt;</pre></div>
         <div class="backtrace"><pre>/Users/brandenmiller/.rvm/gems/ruby-2.2.3/gems/activemodel-4.2.5/lib/active_model/attribute_methods.rb:433:in `method_missing&#39;
 ./spec/models/user_spec.rb:18:in `block (2 levels) in &lt;top (required)&gt;&#39;</pre></div>
     <pre class="ruby"><code><span class="linenum">431</span>      <span class="keyword">else</span>
@@ -641,7 +641,7 @@ expected: &quot;/login&quot;
     </dd>
   </dl>
 </div>
-<script type="text/javascript">document.getElementById('duration').innerHTML = "Finished in <strong>1.00430 seconds</strong>";</script>
+<script type="text/javascript">document.getElementById('duration').innerHTML = "Finished in <strong>0.98364 seconds</strong>";</script>
 <script type="text/javascript">document.getElementById('totals').innerHTML = "35 examples, 10 failures";</script>
 </div>
 </div>
